# PSMa1-VS

./: README.md  mkdocs.yml  pixi.toml  pyproject.toml
.obsidian/: app.json  community-plugins.json
.obsidian/plugins/citater/: data.json
psma1_vs/: __init__.py
study/.overrides/: main.html
tests/: conftest.py
