[project]
authors = [
    {name = "durrantlab", email = "jdurrant@pitt.edu"}
]
description = "PSMa1 virtual screening"
name = "psma1_vs"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<0.8",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["psma1_vs*"]
